# NeuronSimple

./: .gitignore  .replit  CMakeLists.txt  README.md  main.cpp  neuron.cpp  neuron.h
test/: CMakeLists.txt  testNeuronClass.cpp
